src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/IntInstance.deca
// Description:
//   int instance of
//
// Resultats:
//    Erreur contextuelle ligne 12
//    int n'est pas un objet deca
class A{
    int x = 0;
}
{
    A a = new A();
    boolean x = a.x instanceof A;
}
